--- a/css/style.css
+++ b/css/style.css
@@ -2,16 +2,14 @@
 
 :root{
     --md-dark-color: #1d1d1d;
-    --dark-color: #171717;
-    --light-dark-color: #292929;
-    --yellow-color: #d4aa11;
+    --dark-color: #1E201E;
+    --light-dark-color: #9B3922;
+    --yellow-color: #9B3922;
 }
-
 
 *{
     padding: 0;
     margin: 0;
-    box-sizing: border-box;
 }
 
 body{
@@ -21,38 +19,47 @@ body{
 a{
     text-decoration: none;
 }
+
 img{
     width:100%;
     display: block;
 }
+
 .wrapper{
     min-height: 100vh;
     background-color: var(--dark-color);
 }
+
 .wrapper .container{
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 1rem;
-}
-.search-container{
-    background-color: var(--md-dark-color);
-    height: 180px;
     display: flex;
+    padding: 0 1rem;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
 }
+
+.search-container{
+    height: 180px;
+    display: flex;
+    align-items: center;
+    flex-direction: row;
+
+}
+
 .logo{
     padding: 1rem 0;
-    border-bottom: 1px solid var(--light-dark-color);
 }
+
 .logo p{
     font-size: 2rem;
     color: #fff;
     font-weight: bold;
 }
+
 .logo p span{
     color: var(--yellow-color);
 }
+
 .search-element{
     display: flex;
     align-items: stretch;
@@ -60,6 +67,7 @@ img{
     flex-direction: column;
     position: relative;
 }
+
 .search-element h3{
     align-self: center;
     margin-right: 1rem;
@@ -68,6 +76,7 @@ img{
     font-weight: 500;
     margin-bottom: 1.5rem;
 }
+
 .search-element .form-control{
     padding: 1rem 2rem;
     font-size: 1.4rem;
@@ -78,6 +87,7 @@ img{
     color: var(--light-dark-color);
     width: 350px;
 }
+
 .search-list{
     position: absolute;
     right: 0;
@@ -86,6 +96,7 @@ img{
     overflow-y: scroll;
     z-index: 10;
 }
+
 .search-list .search-list-item{
     background-color: var(--light-dark-color);
     padding: 0.5rem;
@@ -95,21 +106,26 @@ img{
     cursor: pointer;
     transition: background-color 200ms ease;
 }
+
 .search-list .search-list-item:hover{
     background-color: #1f1f1f;
 }
+
 .search-list-item{
     display: flex;
     align-items: center;
 }
+
 .search-item-thumbnail img{
     width: 40px;
     margin-right: 1rem;
 }
+
 .search-item-info h3{
     font-weight: 600;
     font-size: 1rem;
 }
+
 .search-item-info p{
     font-size: 0.8rem;
     margin-top: 0.5rem;
@@ -117,7 +133,6 @@ img{
     opacity: 0.6;
 }
 
-/* Thumbnail */
 .search-list::-webkit-scrollbar{
     width: 8px;
 }
@@ -142,10 +157,8 @@ img{
 .movie-poster img{
     max-width: 300px;
     margin: 0 auto;
-    border: 4px solid #fff;
 }
 .movie-info{
-    text-align: center;
     color: #fff;
     padding-top: 3rem;
 }
@@ -196,8 +209,20 @@ img{
 }
 
 @media(max-width: 450px){
+    .wrapper .container {
+        display: flex;
+        padding: 0 1rem;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .movie-info{
+    text-align: center;
+    }
+
     .logo p{
-        font-size: 1.4rem;
+        font-size: 1.5rem;
     }
     .search-element .form-control{
         width: 90%;
@@ -234,10 +259,7 @@ img{
         display: grid;
         grid-template-columns: repeat(2, 1fr);
     }
-    .movie-info{
-        text-align: left;
-        padding-top: 0;
-    }
+    
     .movie-info .movie-misc-info{
         justify-content: flex-start;
         padding-left: 0;
